# hw-utilities-fp

./: .gitignore  CHANGELOG.md  auto_tag.sh  bronze.json  gold.json  guilds.json  hw.cabal  silver.json  tags
app/: Main.hs  mainApp.hs
src/: MyJson.hs  MyLib.hs  helpers.hs  typesold.hs
src/HwData/: values.hs
src/Types/: Guild.hs  assorted.hs  battle.hs  consts.hs  hero.hs  member.hs  pet.hs  titan.hs
src/data/: athHerosAll.csv  athHerosAllClean.csv  athHerosThree.csv  athHerosTwo.csv  athHerosone.csv  bronze.txt  gold.txt  silver.txt
test/: Main.hs
